# miso-exploration

./: .gitignore  Main.hs  README.md  build  miso-test.cabal  stack-ghcjs.yaml  stack.yaml
backend/: ApiType.hs  App.hs  Main.hs  Models.hs  miso-test.cabal  stack.yaml
backend/static/: style.css
common/: Foundation.hs  miso-test-common.cabal
frontend/: Main.hs  frontend.cabal  index.html  stack.yaml
