name:                miso-test
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  frontend/index.html

executable frontend
  main-is:
    Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    ghcjs-options:
      -dedupe
    hs-source-dirs:
      frontend, common
    build-depends:
      aeson,
      base < 5,
      containers,
      miso
    default-language:
      Haskell2010
