name:                miso-test
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable backend
    main-is: Main.hs

    if impl(ghcjs)
        buildable: False
    else
        ghc-options:
            -O2 -threaded -Wall
        hs-source-dirs: backend, common
        other-modules:
            ApiType,
            App,
            Foundation,
            Models
        build-depends:
            aeson,
            base < 5,
            containers,
            transformers,
            resourcet,
            resource-pool,
            miso,
            monad-logger,
            servant,
            servant-server,
            lucid,
            lens,
            servant-lucid,
            persistent,
            persistent-template,
            persistent-sqlite,
            text,
            http-client,
            warp,
            wai,
            wai-extra

        default-language:
            Haskell2010

executable frontend
    main-is: Main.hs
    if !impl(ghcjs)
        buildable: False
    else
        ghcjs-options:
            -dedupe
        hs-source-dirs: frontend, common
        other-modules:
            Foundation
        build-depends:
            aeson == 1.1.1.0,
            base >= 4.7 && < 5,
            ghcjs-base,
            bytestring,
            containers,
            lens,
            servant,
            miso
        default-language: Haskell2010
