name:                miso-test
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable backend
    main-is: Main.hs
    hs-source-dirs: ., ../common
    other-modules:
        ApiType,
        App,
        Models,
        Foundation
    build-depends:
        aeson,
        base < 5,
        containers,
        transformers,
        resourcet,
        resource-pool,
        miso,
        monad-logger,
        servant,
        servant-server,
        lucid,
        lens,
        servant-lucid,
        persistent,
        persistent-template,
        persistent-sqlite,
        text,
        http-client,
        warp,
        wai

    default-language:
        Haskell2010
