name:                miso-test-common
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs: .
    exposed-modules: Foundation
    build-depends:
        aeson >= 1.1.1.0 && < 1.2.0.0,
        containers,
        base < 5,
        miso,
        servant,
        lens
    default-language: Haskell2010
