name:                frontend
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable frontend
    main-is: Main.hs
    hs-source-dirs: ., ../common
    other-modules:
        Foundation
    build-depends:
        aeson == 1.1.1.0,
        base >= 4.7 && < 5,
        ghcjs-base,
        containers,
        lens,
        servant,
        miso
    default-language: Haskell2010
